feature: Configuring kafka producer in task service